// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Diagram anchor 1`] = `
.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 8px;
}

.c1 {
  position: relative;
}

.c2 {
  position: relative;
  display: block;
}

.c5 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
}

.c6 {
  max-width: 100%;
  width: 100%;
  height: 100%;
}

.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media only screen and (max-width:512px) {
  .c4 {
    padding: 8px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
          id="1"
        />
        <div
          class="c4"
          id="2"
        />
      </div>
    </div>
    <div
      class="c5"
    >
      <svg
        class="c6"
        preserveAspectRatio="xMinYMin meet"
        viewBox="0 0 0 0"
      >
        <g>
          <path
            d="M 0,0 Q 0,0 0,0 T 0,0"
            fill="none"
            stroke="#20314f"
            stroke-linecap="butt"
            stroke-linejoin="miter"
            stroke-width="1"
          />
          <path
            d="M 0,0 Q 0,0 0,0 T 0,0"
            fill="none"
            stroke="#20314f"
            stroke-linecap="butt"
            stroke-linejoin="miter"
            stroke-width="1"
          />
          <path
            d="M 0,0 Q 0,0 0,0 T 0,0"
            fill="none"
            stroke="#20314f"
            stroke-linecap="butt"
            stroke-linejoin="miter"
            stroke-width="1"
          />
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`Diagram basic 1`] = `
.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 8px;
}

.c1 {
  position: relative;
}

.c2 {
  position: relative;
  display: block;
}

.c5 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
}

.c6 {
  max-width: 100%;
  width: 100%;
  height: 100%;
}

.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media only screen and (max-width:512px) {
  .c4 {
    padding: 8px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
          id="1"
        />
        <div
          class="c4"
          id="2"
        />
      </div>
    </div>
    <div
      class="c5"
    >
      <svg
        class="c6"
        preserveAspectRatio="xMinYMin meet"
        viewBox="0 0 0 0"
      >
        <g>
          <path
            d="M 0,0 Q 0,0 0,0 T 0,0"
            fill="none"
            stroke="#20314f"
            stroke-linecap="butt"
            stroke-linejoin="miter"
            stroke-width="1"
          />
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`Diagram color 1`] = `
.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 8px;
}

.c1 {
  position: relative;
}

.c2 {
  position: relative;
  display: block;
}

.c5 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
}

.c6 {
  max-width: 100%;
  width: 100%;
  height: 100%;
}

.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media only screen and (max-width:512px) {
  .c4 {
    padding: 8px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
          id="1"
        />
        <div
          class="c4"
          id="2"
        />
      </div>
    </div>
    <div
      class="c5"
    >
      <svg
        class="c6"
        preserveAspectRatio="xMinYMin meet"
        viewBox="0 0 0 0"
      >
        <g>
          <path
            d="M 0,0 Q 0,0 0,0 T 0,0"
            fill="none"
            stroke="#E15151"
            stroke-linecap="butt"
            stroke-linejoin="miter"
            stroke-width="1"
          />
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`Diagram offset 1`] = `
.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 8px;
}

.c1 {
  position: relative;
}

.c2 {
  position: relative;
  display: block;
}

.c5 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
}

.c6 {
  max-width: 100%;
  width: 100%;
  height: 100%;
}

.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media only screen and (max-width:512px) {
  .c4 {
    padding: 8px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
          id="1"
        />
        <div
          class="c4"
          id="2"
        />
      </div>
    </div>
    <div
      class="c5"
    >
      <svg
        class="c6"
        preserveAspectRatio="xMinYMin meet"
        viewBox="0 0 0 0"
      >
        <g>
          <path
            d="M 2,2 Q 2,2 2,2 T 2,2"
            fill="none"
            stroke="#20314f"
            stroke-linecap="butt"
            stroke-linejoin="miter"
            stroke-width="1"
          />
          <path
            d="M 4,4 Q 4,4 4,4 T 4,4"
            fill="none"
            stroke="#20314f"
            stroke-linecap="butt"
            stroke-linejoin="miter"
            stroke-width="1"
          />
          <path
            d="M 8,8 Q 8,8 8,8 T 8,8"
            fill="none"
            stroke="#20314f"
            stroke-linecap="butt"
            stroke-linejoin="miter"
            stroke-width="1"
          />
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`Diagram thickness 1`] = `
.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 8px;
}

.c1 {
  position: relative;
}

.c2 {
  position: relative;
  display: block;
}

.c5 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
}

.c6 {
  max-width: 100%;
  width: 100%;
  height: 100%;
}

.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media only screen and (max-width:512px) {
  .c4 {
    padding: 8px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
          id="1"
        />
        <div
          class="c4"
          id="2"
        />
      </div>
    </div>
    <div
      class="c5"
    >
      <svg
        class="c6"
        preserveAspectRatio="xMinYMin meet"
        viewBox="0 0 0 0"
      >
        <g>
          <path
            d="M 0,0 Q 0,0 0,0 T 0,0"
            fill="none"
            stroke="#20314f"
            stroke-linecap="butt"
            stroke-linejoin="miter"
            stroke-width="1"
          />
          <path
            d="M 0,0 Q 0,0 0,0 T 0,0"
            fill="none"
            stroke="#20314f"
            stroke-linecap="butt"
            stroke-linejoin="miter"
            stroke-width="1"
          />
          <path
            d="M 0,0 Q 0,0 0,0 T 0,0"
            fill="none"
            stroke="#20314f"
            stroke-linecap="butt"
            stroke-linejoin="miter"
            stroke-width="2"
          />
          <path
            d="M 0,0 Q 0,0 0,0 T 0,0"
            fill="none"
            stroke="#20314f"
            stroke-linecap="butt"
            stroke-linejoin="miter"
            stroke-width="4"
          />
          <path
            d="M 0,0 Q 0,0 0,0 T 0,0"
            fill="none"
            stroke="#20314f"
            stroke-linecap="butt"
            stroke-linejoin="miter"
            stroke-width="8"
          />
          <path
            d="M 0,0 Q 0,0 0,0 T 0,0"
            fill="none"
            stroke="#20314f"
            stroke-linecap="butt"
            stroke-linejoin="miter"
            stroke-width="5"
          />
        </g>
      </svg>
    </div>
  </div>
</div>
`;

exports[`Diagram type 1`] = `
.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  outline: none;
  max-width: 100%;
  min-width: 0;
  min-height: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  padding: 8px;
}

.c1 {
  position: relative;
}

.c2 {
  position: relative;
  display: block;
}

.c5 {
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
}

.c6 {
  max-width: 100%;
  width: 100%;
  height: 100%;
}

.c0 {
  font-size: 12px;
  line-height: 16px;
  box-sizing: border-box;
  -webkit-text-size-adjust: 100%;
  -ms-text-size-adjust: 100%;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
}

@media only screen and (max-width:512px) {
  .c4 {
    padding: 8px;
  }
}

<div
  class="c0"
>
  <div
    class="c1"
  >
    <div
      class="c2"
    >
      <div
        class="c3"
      >
        <div
          class="c4"
          id="1"
        />
        <div
          class="c4"
          id="2"
        />
      </div>
    </div>
    <div
      class="c5"
    >
      <svg
        class="c6"
        preserveAspectRatio="xMinYMin meet"
        viewBox="0 0 0 0"
      >
        <g>
          <path
            d="M 0,0 L 0,0"
            fill="none"
            stroke="#20314f"
            stroke-linecap="butt"
            stroke-linejoin="miter"
            stroke-width="1"
          />
          <path
            d="M 0,0 Q 0,0 0,0 T 0,0"
            fill="none"
            stroke="#20314f"
            stroke-linecap="butt"
            stroke-linejoin="miter"
            stroke-width="1"
          />
          <path
            d="M 0,0 L 0,0 L 0,0 L 0,0"
            fill="none"
            stroke="#20314f"
            stroke-linecap="butt"
            stroke-linejoin="miter"
            stroke-width="1"
          />
        </g>
      </svg>
    </div>
  </div>
</div>
`;
